--- a/test/fixtures/riders.yml
+++ b/test/fixtures/riders.yml
@@ -4,8 +4,16 @@
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+one: 
+  first_name: John
+  last_name: Doe
+  city: Paris
+  state: Ile-de-France
 # column: value
 #
-two: {}
+two: 
+  first_name: Jane
+  last_name: Smith
+  city: New York
+  state: New York
 # column: value
