--- a/test/fixtures/locations.yml
+++ b/test/fixtures/locations.yml
@@ -4,8 +4,13 @@
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-# column: value
+one:
+  rider: one
+  latitude: 48.8566
+  longitude: 2.3522
+
+two:
+  rider: two
+  latitude: 40.7128
+  longitude: -74.0060
+
